# Pictorial

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  geometry.ts  main.tsx  media.ts  useViewer.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs  main.rs
